# BoAaP

./: 2Task.cpp  MyLibConfig.cmake  README.md  static.lib
AnotherAnotherAnotherAnother(5)Lab/: 1Task.cpp  CMakeLists.txt  testexample.cpp
AnotherAnotherAnotherAnother(5)Lab/staticlib/: CMakeLists.txt  library.h
Another_Another_AnotherLab(4)/10Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/11Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/12Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/13Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/1Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/2Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/3Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/4Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/5Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/6Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/7Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/8Exercise/: CMakeLists.txt  main.cpp
Another_Another_AnotherLab(4)/9Exercise/: CMakeLists.txt  a.out  main.cpp
FinalShared/: CMakeLists.txt  dynamicLibrary.cpp  dynamicLibrary.h
LabNumber5/: 1Task.cpp  2Task.cpp  3Task.cpp  3Task.h  4Task.cpp  4Task.h  5Task.cpp  5Task.h  6Task.cpp  7Task.cpp  CMakeLists.txt  dynamicLibrary.cpp  dynamicLibrary.h  library.cpp  library.h  testexample.cpp  tests.cpp
LabNumber5/1Task/: 1Task.cpp  CMakeLists.txt
LabNumber5/1Task/cmake/: FindStatic.cmake
LabNumber5/1Task/static/: library.cpp
LabNumber5/2Task/: 2Task.cpp  CMakeLists.txt
LabNumber5/2Task/Debug/: 2Task.sln  2Task.vcxproj  2Task.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
LabNumber5/2Task/cmake/: Findshared_lib.cmake
LabNumber5/2Task/lib/: shared_lib.exp
LabNumber5/2TaskNew/: 2Task.cpp  2Task.exe.stackdump  CMakeLists.txt
LabNumber5/3Task/: 3Task.cpp  3Task.h
LabNumber5/4Task/: 4Task.cpp  4Task.h
LabNumber5/5Task/: 5Task.cpp  5Task.h
LabNumber5/6Task/: 6Task.cpp
LabNumber5/7Task/: 7Task.cpp
LabNumber5/8Task/: 8Task.cpp
LabNumber5/Tests/: CMakeLists.txt  tests.cpp
LabNumber6/: 1Task.cpp  2Task.cpp  3Task.cpp  4Task.cpp  5Task.cpp  5Task.h  6Task.cpp  7Task.cpp  8Task.cpp  CMakeLists.txt
LabNumber6/tests/: CMakeLists.txt  test.cpp
LabNumber7/: 1Task.cpp  2Task.cpp  3Task.cpp  3Task.h  4Task.cpp  4Task.h  5Task.cpp  5Task.h  6Task.cpp  6Task.h  7Task.cpp  7Task.h  8Task.cpp  8Task.h  9Task.cpp  CMakeLists.txt  main.cpp  test.cpp
LabNumber8/: CMakeLists.txt  Input.txt  Task1.cpp  Task2.cpp
LabNumber8/Task1/: CMakeLists.txt  Header.h  Implementation.cpp  Implementation.h  Menu.cpp  Menu.h  SportPlayer.cpp  SportPlayer.h  Task1.cpp
LabNumber8/Task2/: CMakeLists.txt  Commands.txt  Implementations.cpp  Implementations.h  Input.txt  Menu.cpp  Menu.h  Output.txt  Rabotyaga.cpp  Rabotyaga.h  Task2.cpp
LabNumber8/Task3/: Books.cpp  Books.h  CMakeLists.txt  Header.h  Implementation.cpp  Implementation.h  Input.txt  Menu.cpp  Menu.h  Output.txt  Task3.cpp
Lab_From_Win_3/AnotherAnotherLab_3/1exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/2exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/3exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/4exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/5exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/6exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/7exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/8exercise/: CMakeLists.txt  main.cpp
Lab_From_Win_3/AnotherAnotherLab_3/9exercise/: CMakeLists.txt  main.cpp
Project/: CMakeLists.txt  FieldOfLife.cpp  FieldOfLife.h  GameOfLife.cpp  SlotMachine.h
lib/: CMakeLists.txt  dynamicLibrary.cpp  dynamicLibrary.h
