cmake_minimum_required(VERSION 3.23)
project(LabNumber7)

set(CMAKE_CXX_STANDARD 14)

add_executable(1Task 1Task.cpp)
add_executable(2Task 2Task.cpp)
add_executable(3Task 3Task.cpp 3Task.h)
add_executable(4Task 4Task.cpp 4Task.h)
add_executable(6Task 6Task.cpp 6Task.h)
add_executable(7Task 7Task.cpp 7Task.h)
add_executable(8Task 8Task.cpp 8Task.h)
add_executable(9Task 9Task.cpp)
add_executable(main main.cpp)
